# spectrum

./: .clang-format  .gitignore  CMakeLists.txt
AudioFile/: CMakeLists.txt
BMP/: CMakeLists.txt  color.h
common/: CMakeLists.txt  fft_types.h  i_processor.h  impl.h  property.h
fft/: CMakeLists.txt  fft.cpp  fft.h  fft_types.h  hamming.cpp  hamming.h  iwindow.h  rescaler.cpp  rescaler.h  window.h
filter/: CMakeLists.txt  normalizer.cpp  normalizer.h
source/: CMakeLists.txt  noise.cpp  noise.h  sinus.cpp  sinus.h
sync/: CMakeLists.txt  spectrogram.cpp  spectrogram.h
tests/: CMakeLists.txt  bmp_test.cpp  fft_test.cpp  filter_test.cpp  source_test.cpp  sync_test.cpp
